--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,40 @@
 <footer class="footer">
-  My App
-  <nav>
-    <ul>
-      <li><%= link_to "Home", root_path %></li>
-    </ul>
-  </nav>
+  <div class=""></div>
+
+      <ul class="social-links">
+          <li>
+            <%= link_to '/fb', target: '_blank' do %>
+              <i class="fa fa-facebook"></i>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to '/twitter', target: '_blank' do %>
+              <i class="fa fa-twitter"></i>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to '/linkedin', target: '_blank' do %>
+              <i class="fa fa-linkedin"></i>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to '/twitter', target: '_blank' do %>
+              <i class="fa fa-twitter"></i>
+            <% end %>
+          </li>
+
+          <li>
+            <%= link_to '/youtube', target: '_blank' do %>
+              <i class="fa fa-youtube"></i>
+            <% end %>
+          </li>
+      </ul>
+      <h5>218 N. Alston Street | Foley, AL 36535</h5>
+
+    <div class="logo-footer"><%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive ftlogo-img'), root_path ) %></div>
 </footer>
 
 
@@ -28,3 +58,7 @@
         </div>
     </div>
 </div>
+  <!--
+Home Auto Accidents 18-Wheeler Accidents Personal Injury Claims About Us Blog Contact Us Useful Resources
+Noel B. Leonard Attorney LLC • 218 N. Alston Street • Foley, AL 36535 • Phone: 251-943-8638 • Fax: 866-648-8201
+No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers. -->
