--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,10 +65,28 @@
     </div>
   </div>
 </header>
+<!--
+Auto Accidents
+  Bicycle and Pedestrian Injury Claims
+  Distracted Driving Accident Claims
+  DUI Accident Victims &amp; Injury Claims
+  Hit &amp; Run Accident Victims
+  Motorcyle Accident Injury Claims
+  Whiplash Injury Claims
+
+18 Wheeler Accidents
+  Claims Against the Driver
+  Claims Against the Trucking Company
+  Faulty Equipment or Safety Violation Claims
+  Hazardous Material &amp; Dangerous Cargo Claims
 
 
-
-
-
-
-
+Personal Injury
+  Food Poisoning Claims
+  Hoverboard Claims
+  Misfilled Prescriptions &amp; Medical Malpractice
+  Premises Liability &amp; Employer Negligence
+  Product Liability Claims
+  Slip and Fall Injury Claims
+  Wrongful Death Claims
+ -->
