--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,51 +1,31 @@
-<% @page_title = "Noel Leonard Attorney" %>
-<% @page_description = "New Subject" %>
+<% @page_title = "Noel Leonard, Foley Attorney" %>
+<% @page_description = "Noel B. Leonard is a Foley Alabama injury attorney for personal injury, auto accidents, and 18 wheeler crashes in Baldwin, Mobile, and Escambia Counties." %>
 
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+			Our firm ensures that victims of an automotive accident receive proper compensation for personal injuries sustained during the accident, post-medical needs and rehabilitation, as well as property damages to vehicles, dwellings, and or businesses.
 
-No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers.
+			Whether the cause of the accident is driver fatigue or error, equipment failure, shifting or falling cargo, improper training or any other negligent action by the driver or carrier, we will help you and your family get through the trying times.
 
-
-
-
-Serving Baldwin, Mobile, & Escambia Counties in Alabama 218 N. Alston Street | Foley, AL 36535
-
-Noel B. Leonard Attorney, LLC
-Call Today
-251-943-8638
-habla espanol? haga clic aqui
-HOMEAUTO ACCIDENTS 18 WHEELER ACCIDENTS PERSONAL INJURY ABOUT USBLOGCONTACT USRESOURCES
-Personal Injury
-LEARN MORE
-Every person who has suffered a personal injury deserves the time and dedication our law firm can provide, in order to make sure you are compensated for your legitimate physical and financial pain and suffering.
+			Every person who has suffered a personal injury deserves the time and dedication our law firm can provide, in order to make sure you are compensated for your legitimate physical and financial pain and suffering.
 
 
-Noel B. Leonard Foley Injury LawyerFoley Alabama Injury Attorney
+Foley Alabama Injury Attorney
 Noel B. Leonard
-Committed to Providing Excellent Legal Service
-Within the State of Alabama
-"Accidents happen...but finding the right attorney doesn't happen by accident."
+Committed to Providing Excellent Legal Service Within the State of Alabama
 
+"Accidents happen...but finding the right attorney doesn't happen by accident."
 If you are the victim of a serious personal injury, auto accident injury or 18-wheeler accident injury in Baldwin, Mobile, or Escambia County, Foley injury attorney Noel B. Leonard can help.
+
 Noel's firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries and all other damages sustained during the accident.
+
 Noel B. Leonard Attorney, LLC employs a knowledgeable legal staff capable of addressing any legal concerns you may have.
 
-
-Our practice areas include
-but are not limited to:
-
- AUTO ACCIDENT INJURY CLAIMS
+Our practice areas include but are not limited to:
+AUTO ACCIDENT INJURY CLAIMS
 18 WHEELER ACCIDENT VICTIMS
-       PERSONAL INJURY CLAIMS
+PERSONAL INJURY CLAIMS
 
+<!--
+<a rel="wp-video-lightbox" href="https://www.youtube.com/watch?v=7Ax8NAhosgo&amp;width=850&amp;height=500" title=""><img src="http://www.attorney-leonard.com/wp-content/uploads/2015/06/video1.png" class="video_lightbox_anchor_image" alt="" /></a>
 
-
-
-Home Auto Accidents 18-Wheeler Accidents Personal Injury Claims About Us Blog Contact Us Useful Resources
-Noel B. Leonard Attorney LLC • 218 N. Alston Street • Foley, AL 36535 • Phone: 251-943-8638 • Fax: 866-648-8201
-No representation is made that the quality of legal services to be performed is greater than the quality of legal services performed by other lawyers.
-Copyright 2016   |   website design, hosting, and seo by Vinci Digital Marketing
-Noel B. Leonard, Attorney LLC
-
-
+<a rel="wp-video-lightbox" href="https://www.youtube.com/watch?v=5at_QmbdWAQ&amp;width=850&amp;height=500" title=""><img src="http://www.attorney-leonard.com/wp-content/uploads/2015/06/video21.png" class="video_lightbox_anchor_image" alt="" /></a>
+ -->
