--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,16 +3,20 @@
 
 header {@include sec-default();background-color: $navy;}
 
-#top-bar {  @include sec-default(); background-color: $black; padding: 5px 80px 0px;
+#top-bar {  @include sec-default(); background-color: $black; padding: 5px 80px 0;
   .social-links, .block2, .block3 {display: inline-block;}
-  h4, h5 {color: $white;}
+  h4, h5 {color: $white; }
+  h5 {font-size: 14px; margin: 5px 0 0; line-height: 1em;}
 }
 .social-links {float: left; padding-top: 5px;
   li {display: inline-block; a { display: inline-block; margin-right: 3px;background-color: $br-blue; border-radius: 50%; width:25px; height: 25px; padding-top:1px; text-align: center; transition: all 0.3s ease 0s; color: $black; font-size: 17px;
     &:hover {color: white;}}
   }
 }
-.block2 {float: none; margin-left: 10%;}
+.block2 { position: absolute; width: 45%; padding: 5px; text-align: center; margin-left: 5%; border-radius: 0 0 10px 10px;
+  background: -webkit-linear-gradient(-180deg, rgba($navy, .99), rgba($black, .8));
+  background: linear-gradient(-180deg, rgba($navy, .99), rgba($black, .8));
+}
 .block3 {float: right; padding-top: 5px; }
 
 .main-header {@include sec-default(); padding:15px 75px 10px;
@@ -23,13 +27,11 @@ header {@include sec-default();background-color: $navy;}
 .logo-block {img, h2 {display: inline-block; color:$white;}}
 .esp-block{float: right;}
 
-.megamenu-parent {list-style:none;
+.mega-tab {list-style:none; margin-top: 15px; text-align: center;
   li{display:inline-block; margin: 0 15px;
       &:last-child{margin-right: 5px;}
       a{ font-size: 15px; color: $white; text-transform: uppercase; padding-top:10px; }
   }
-
-  li.has-child>a:after{font-family:"FontAwesome";content:" \f107"}
 
   .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
   .has-child:hover >.dropdown{display:block;width:175px; }
@@ -43,7 +45,6 @@ header {@include sec-default();background-color: $navy;}
       }
   }
 }
-
 
 #offcanvas-toggler {
   width: 40px;
